# TagTinker

./: .gitignore  CONTRIBUTING.md  LEGALITY.md  README.md  application.fam  tagtinker_app.c  tagtinker_app.h
android-companion/: local.properties  settings.gradle.kts
android-companion/app/: build.gradle.kts  proguard-rules.pro
cloud-plugins/: package-lock.json  package.json  tsconfig.json  wrangler.toml
cloud-plugins/src/: canvas.ts  font.ts  image_util.ts  (+3 more)
esp32-wifi-fw/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
esp32-wifi-fw/main/: CMakeLists.txt  cloud_client.c  cloud_client.h  main.c  wifi_link.c  wifi_link.h  wifi_net.c  wifi_net.h
ir/: tagtinker_ir.c  tagtinker_ir.h
nfc/: tagtinker_nfc.c  tagtinker_nfc.h
protocol/: tagtinker_proto.c  tagtinker_proto.h
scenes/: tagtinker_scene.c  tagtinker_scene.h  tagtinker_scene_about.c  tagtinker_scene_barcode_input.c  tagtinker_scene_broadcast.c  tagtinker_scene_broadcast_menu.c  tagtinker_scene_main_menu.c  tagtinker_scene_nfc_scan.c  tagtinker_scene_preset_list.c  tagtinker_scene_settings.c  tagtinker_scene_size_picker.c  tagtinker_scene_synced_image_list.c  tagtinker_scene_target_actions.c  tagtinker_scene_target_menu.c  tagtinker_scene_text_box.c  tagtinker_scene_text_input.c  tagtinker_scene_transmit.c  tagtinker_scene_warning.c  tagtinker_scene_wifi_plugins.c  tagtinker_scene_wifi_run.c  tagtinker_scene_wifi_setup.c
shared/: tt_wifi_proto_fap.h
views/: numlock_input.c  numlock_input.h  tagtinker_font.h
wifi/: tagtinker_wifi.c  tagtinker_wifi.h  tagtinker_wifi_bmp.c  tagtinker_wifi_bmp.h
(+16 files in other folders)
